gatekeeper/constraints/no-default-sa.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sForbidDefaultServiceAccount
metadata:
  name: no-default-sa
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system", "istio-system", "spire", "gatekeeper-system"]
